--- a/index.html
+++ b/index.html
@@ -4,12 +4,56 @@
     <meta charset="UTF-8">
     <title>Bofolio</title>
      <link rel="icon" href="bo.ico" type="image/x-icon"> 
-    <!-- <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">-->
+    <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">
     
 </head>
 <body>
-<header class="neader">
-	bofolio
+<header class="header">
+	<div class="author">
+		<div class="img"><img src="bofolio/images/bo.png" alt=""></div>
+		<div class="a-name">Vladimir<br><span>wb / dsgn</span></div>
+	</div>
+	<nav class="nav-bar">
+		<ul class="menu">
+			<li><a href="#">bofolio</a></li>
+			<li><a href="#">skills</a></li>
+			<li><a href="#">contact</a></li>
+		</ul>
+	</nav>
 </header>
+<main class="page">
+	<section class="bfolio">
+		<div class="bf-item">
+			<figure class="pic"><img src="bofolio/images/temp/lead.png" alt=""></figure>
+			<div class="title">Lead.im</div>
+			<a href="http://www.lead.im/" target="_blank" class="link">www.lead.im</a>
+		</div>
+		<div class="bf-item">
+			<figure class="pic"><img src="bofolio/images/temp/yotam.png" alt=""></figure>
+			<div class="title">Yotam bezalel</div>
+			<a href="http://yotam-bezalel.co.il" target="_blank" class="link">yotam-bezalel.co.il</a>
+		</div>
+		<div class="bf-item">
+			<figure class="pic"><img src="bofolio/images/temp/sohm.png" alt=""></figure>
+			<div class="title">Dominique Sohm</div>
+			<a href="http://www.sohm-productions.at" target="_blank" class="link">www.sohm-productions.at</a>
+		</div>
+		<div class="bf-item">
+			<figure class="pic"><a href="bofolio/images/temp/sohm2.png" target="_blank"><img src="bofolio/images/temp/sohm2s.png" alt=""></a></figure>
+			<div class="title">Dominique Sohm</div>
+			<a href="bofolio/images/temp/sohm2.png" target="_blank" class="link">screen</a>
+		</div>
+		<div class="bf-item">
+			<figure class="pic"><a href="bofolio/images/temp/swissstar.png" target="_blank"><img src="bofolio/images/temp/swissstars.png" alt=""></a></figure>
+			<div class="title">Dominique Sohm</div>
+			<a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
+		</div>
+		<div class="bf-item">
+			<figure class="pic"><img src="bofolio/images/temp/partnership4u.png" alt=""></figure>
+			<div class="title">Partnership4u</div>
+			<a href="http://www.partnership4u.com" target="_blank" class="link">www.partnership4u.com</a>
+		</div>
+	</section>
+</main>
 </body>
 </html>
