--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 			<div class="title">Partnership4u</div>
 			<a href="http://www.partnership4u.com" target="_blank" class="link">www.partnership4u.com</a>
 		</div>
+		<div class="bf-item">
+			<figure class="pic"><img src="bofolio/images/temp/tipuli.png" alt=""></figure>
+			<div class="title">Tipuli</div>
+			<a href="http://www.tipuli.co.il/" target="_blank" class="link">www.tipuli.co.il</a>
+		</div>
 	</section>
 </main>
 </body>
