--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<nav class="nav-bar">
 		<ul class="menu">
-			<li><a href="#">bofolio</a></li>
+			<li class="active"><a href="#">bofolio</a></li>
 			<li><a href="#">skills</a></li>
 			<li><a href="#">contact</a></li>
 		</ul>
@@ -59,6 +59,9 @@
 			<a href="http://www.tipuli.co.il/" target="_blank" class="link">www.tipuli.co.il</a>
 		</div>
 	</section>
+	<footer class="footer">
+	    <div class="text">&copy; made with duck</div>
+	</footer>
 </main>
 </body>
 </html>
