--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Bofolio</title>
      <link rel="icon" href="bo.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">
-    
+    <script src="bofolio/js/jquery-3.2.1.min.js"></script>
+    <script src="bofolio/js/js.js"></script>
 </head>
 <body>
 <header class="header">
@@ -15,9 +16,9 @@
 	</div>
 	<nav class="nav-bar">
 		<ul class="menu">
-			<li class="active"><a href="#">bofolio</a></li>
-			<li><a href="#">skills</a></li>
-			<li><a href="#">contact</a></li>
+			<li class="active"><a class="nav-link" href="#">bofolio</a></li>
+			<li><a class="nav-link" href="#">skills</a></li>
+			<li><a class="nav-link" href="#">contact</a></li>
 		</ul>
 	</nav>
 </header>
