--- a/index.html
+++ b/index.html
@@ -1,68 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>Bofolio</title>
-     <link rel="icon" href="bo.ico" type="image/x-icon"> 
+    <link rel="icon" href="bo.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="bofolio/css/style.css" type="text/css">
     <script src="bofolio/js/jquery-3.2.1.min.js"></script>
     <script src="bofolio/js/js.js"></script>
 </head>
 <body>
-<header class="header">
-	<div class="author">
-		<div class="img"><img src="bofolio/images/bo.png" alt=""></div>
-		<div class="a-name">Vladimir<br><span>wb / dsgn</span></div>
-	</div>
-	<nav class="nav-bar">
-		<ul class="menu">
-			<li class="active"><a class="nav-link" href="#">bofolio</a></li>
-			<li><a class="nav-link" href="#">skills</a></li>
-			<li><a class="nav-link" href="#">contact</a></li>
-		</ul>
-	</nav>
-</header>
-<main class="page">
-	<section class="bfolio">
-		<div class="bf-item">
-			<figure class="pic"><img src="bofolio/images/temp/lead.png" alt=""></figure>
-			<div class="title">Lead.im</div>
-			<a href="http://www.lead.im/" target="_blank" class="link">www.lead.im</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><img src="bofolio/images/temp/yotam.png" alt=""></figure>
-			<div class="title">Yotam bezalel</div>
-			<a href="http://yotam-bezalel.co.il" target="_blank" class="link">yotam-bezalel.co.il</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><img src="bofolio/images/temp/sohm.png" alt=""></figure>
-			<div class="title">Dominique Sohm</div>
-			<a href="http://www.sohm-productions.at" target="_blank" class="link">www.sohm-productions.at</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><a href="bofolio/images/temp/sohm2.png" target="_blank"><img src="bofolio/images/temp/sohm2s.png" alt=""></a></figure>
-			<div class="title">Dominique Sohm</div>
-			<a href="bofolio/images/temp/sohm2.png" target="_blank" class="link">screen</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><a href="bofolio/images/temp/swissstar.png" target="_blank"><img src="bofolio/images/temp/swissstars.png" alt=""></a></figure>
-			<div class="title">Dominique Sohm</div>
-			<a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><img src="bofolio/images/temp/partnership4u.png" alt=""></figure>
-			<div class="title">Partnership4u</div>
-			<a href="http://www.partnership4u.com" target="_blank" class="link">www.partnership4u.com</a>
-		</div>
-		<div class="bf-item">
-			<figure class="pic"><img src="bofolio/images/temp/tipuli.png" alt=""></figure>
-			<div class="title">Tipuli</div>
-			<a href="http://www.tipuli.co.il/" target="_blank" class="link">www.tipuli.co.il</a>
-		</div>
-	</section>
-	<footer class="footer">
-	    <div class="text">&copy; made with duck</div>
-	</footer>
-</main>
+    <header class="header">
+        <div class="author">
+            <div class="img"><img src="bofolio/images/bo.png" alt=""></div>
+            <div class="a-name">Vladimir<br><span>wb / dsgn</span></div>
+        </div>
+        <nav class="nav-bar">
+            <ul class="menu">
+                <li class="active"><a class="nav-link" href="#">bofolio</a></li>
+                <li><a class="nav-link" href="#">skill</a></li>
+                <li><a class="nav-link" href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="page">
+        <section class="bfolio">
+            <div class="bf-item">
+                <figure class="pic"><img src="bofolio/images/temp/lead.png" alt=""></figure>
+                <div class="title">Lead.im</div>
+                <a href="#" target="_blank" class="link">www.lead.im</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><img src="bofolio/images/temp/yotam.png" alt=""></figure>
+                <div class="title">Yotam bezalel</div>
+                <a href="#" target="_blank" class="link">yotam-bezalel.co.il</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><img src="bofolio/images/temp/sohm.png" alt=""></figure>
+                <div class="title">Dominique Sohm</div>
+                <a href="#" target="_blank" class="link">www.sohm-productions.at</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><a href="bofolio/images/temp/sohm2.png" target="_blank"><img src="bofolio/images/temp/sohm2s.png" alt=""></a></figure>
+                <div class="title">Dominique Sohm</div>
+                <a href="bofolio/images/temp/sohm2.png" target="_blank" class="link">screen</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><a href="bofolio/images/temp/swissstar.png" target="_blank"><img src="bofolio/images/temp/swissstars.png" alt=""></a></figure>
+                <div class="title">Dominique Sohm</div>
+                <a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><img src="bofolio/images/temp/partnership4u.png" alt=""></figure>
+                <div class="title">Partnership4u</div>
+                <a href="#" target="_blank" class="link">www.partnership4u.com</a>
+            </div>
+            <div class="bf-item">
+                <figure class="pic"><img src="bofolio/images/temp/tipuli.png" alt=""></figure>
+                <div class="title">Tipuli</div>
+                <a href="#" target="_blank" class="link">www.tipuli.co.il</a>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skll-item">
+                <div class="title">Photoshop</div>
+                <figure class="pic"><img src="bofolio/images/temp/ps.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">Illustrator</div>
+                <figure class="pic"><img src="bofolio/images/temp/ai.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">HTML</div>
+                <figure class="pic"><img src="bofolio/images/temp/html.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">CSS</div>
+                <figure class="pic"><img src="bofolio/images/temp/css.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">Sass</div>
+                <figure class="pic"><img src="bofolio/images/temp/sass.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">jQuery</div>
+                <figure class="pic"><img src="bofolio/images/temp/jq.jpg" alt=""></figure>
+            </div>
+            <div class="skll-item">
+                <div class="title">Gulp/Grunt</div>
+                <figure class="pic"><img src="bofolio/images/temp/gulp-grunt.jpg" alt=""></figure>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="text">&copy; made with duck</div>
+    </footer>
 </body>
 </html>
