--- a/carbontec/contact.html
+++ b/carbontec/contact.html
@@ -59,41 +59,35 @@
 		</div>
 	</header>
 	<main class="page">
-		<div class="wrap pt250">
+		<div class="wrap contact-form pt250 mb90">
 			<div class="container">
-				<div class="about">
-					<div class="text text-center">After discovering the benefit of the innovative Carbontec® system in Europe and Russia, four entrepreneurs set their minds on bringing the  technology to North America. Carbontec® was founded in 2016 when the company gained exclusive license from the main manufacturer in Germany, Ginesys GmBh, to do just that. Carbontec® was founded with a committment to bringing a better, cheaper, more efficient, cleaner, healthier, and environmentally-friendly heating product to the world.</div>
-					<h1 class="heading red text-center"><span>Founders</span></h1>
+				<div class="form-wrap">
+					<div class="heading">Get in touch</div>
 					<div class="row">
-						<div class="col-md-6">
-							<div class="founder">
-								<div class="pic"><img class="img-responsive" src="images/Greg-Rovner.png" alt="Greg Rovner"></div>
-								<h2 class="title"><span>GREG ROVNER</span></h2>
-								<div class="text">Greg has been involved in business development for over 20 years and has successfully launched several existing businesses. He has consulted on projects ranging from tech, fossil fuel, real estate development, online travel agencies, and more. Greg has a track record of success and most recently raised over $1M for one of his tech plays, Heally.</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="founder">
-								<div class="pic"><img class="img-responsive" src="images/Greg-Landau.png" alt="Greg Landau"></div>
-									<h2 class="title"><span>GREG LANDAU</span></h2>
-									<div class="text">Greg immigrated to the United States in 1979, with no help or grasp of the English language. With hard work and dedication, he became a true success story by building one of the largest insurance brokerages in New York at the time, and being dubbed the “American Dream” in various publications.</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-10 col-md-offset-1">
-							<div class="founder">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="pic"><img class="img-responsive" src="images/Burton-Landau.png" alt="BURTON LANDAU, ESQ"></div>
-										<h2 class="title"><span>BURTON LANDAU, ESQ</span></h2>
-									</div>
-									<div class="col-md-6">
-										<div class="pic"><img class="img-responsive" src="images/Nima-Ajabshir.png" alt="NIMA AJABSHIR, ESQ"></div>
-										<h2 class="title"><span>NIMA AJABSHIR, ESQ</span></h2>
-									</div>
+						<div class="col-md-7">
+							<form>
+								<div class="f-row">
+									<div class="f-title">Name *</div>
+									<input type="text" class="form-control">
 								</div>
-								<div class="text">Burton and Nima make up South Florida Law, PLLC. The business partners of South Florida Law founded the full-service law firm in 2014, and since have developed it into a successful practice, with a heavy focus on commercial &amp; business transactions and contracts.  They work as in-house counsel for Carbontec Worldwide LLC and their legal expertise combined with experience running a successful business work as an invaluable asset to Carbontec. Both Burton and Nima received their Juris Doctorate from the St. Thomas University School of Law in Florida.</div>
+								<div class="f-row">
+									<div class="f-title">Email*</div>
+									<input type="email" class="form-control">
+								</div>
+								<div class="f-row">
+									<div class="f-title">Message</div>
+									<textarea class="form-control"></textarea>
+								</div>
+								<div class="f-row text-right"><button type="submut" class="btn btn-submit">Send</button></div>
+							</form>
+						</div>
+						<div class="col-md-4 col-md-offset-1">
+							<div class="title text-center">CARBONTEC INTERNATIONAL</div>
+							<div class="text text-center">
+								<p><strong>CALIFORNIA</strong><br/>6701 Mission St.<br/>Suite #7<br/>Daly City, CA 94014</p>
+								<p><strong>FLORIDA</strong><br>1920 E. Hallandale Beach Blvd.<br>Suite 503<br>Hallandale Beach, FL 33009</p>
+								<p><strong>PHONE</strong><br>1-(855)-737-HEAT (4328)</p>
+								<p><strong>EMAIL</strong><br>info@carbontec.com</p>
 							</div>
 						</div>
 					</div>
