--- a/carbontec/index.html
+++ b/carbontec/index.html
@@ -16,97 +16,253 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/js.js"></script>
 </head>
-<body>
+<body class="inner-page">
 	<a href="#" class="mob-btn"><span></span></a>
 	<nav class="mobile-nav">
 		<a href="#" class="close"><i class="fa fa-times" aria-hidden="true"></i></a>
 		<ul class="menu clearfix">
-			<li class="active"><a href="#">HOME</a></li>
+			<li><a href="#">HOME</a></li>
+			<li class="active"><a href="#">CARBONTEC</a></li>
+			<li><a href="#">DISTRIBUTOR</a></li>
 			<li><a href="#">ABOUT</a></li>
-			<li><a href="#">COMPANY</a></li>
-			<li><a href="#">SPECIFICATION</a></li>
-			<li><a href="#">EVENT</a></li>
-			<li><a href="#">REPRESENTATIVES</a></li>
 			<li><a href="#">CONTACT</a></li>
 		</ul>
 	</nav>
 	<header class="main-nav">
 		<div class="wrap">
-			<a href="#" class="logo"><img src="images/logo.png" class="img-responsive" alt=""></a>
-			<nav class="menu-bar">
-				<ul class="menu clearfix">
-					<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#">ABOUT</a></li>
-					<li><a href="#">COMPANY</a></li>
-					<li><a href="#">SPECIFICATION</a></li>
-					<li><a href="#">EVENT</a></li>
-					<li><a href="#">REPRESENTATIVES</a></li>
-					<li><a href="#">CONTACT</a></li>
-				</ul>
-			</nav>
-			<div class="search">
-				<form>
-					<input type="text" class="control" placeholder="Search..."><button class="btn-search" type="submit"></button>
-				</form>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<a href="#" class="logo"><img src="images/logo.png" class="img-responsive" alt=""></a>
+					</div>
+					<div class="col-sm-8">
+						<nav class="menu-bar">
+							<ul class="menu clearfix">
+								<li><a href="#">HOME</a></li>
+								<li class="active"><a href="#">CARBONTEC</a></li>
+								<li><a href="#">DISTRIBUTOR</a></li>
+								<li><a href="#">ABOUT</a></li>
+								<li><a href="#">CONTACT</a></li>
+							</ul>
+						</nav>
+						<div class="search">
+							<a href="#" class="btn"></a>
+							<div class="search-wrap">
+								<form>
+									<input type="text" class="control" placeholder="Search..."><button class="btn-search" type="submit"></button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
-	<div class="owl-carousel">
-		<div class="carousel-item shadow-top"><img src="images/slider/slider1.jpg" alt=""></div>
-		<div class="carousel-item shadow-top"><img src="images/slider/slider2.jpg" alt=""></div>
-		<div class="carousel-item shadow-top"><img src="images/slider/slider1.jpg" alt=""></div>
-		<div class="carousel-item shadow-top"><img src="images/slider/slider2.jpg" alt=""></div>
-	</div>
 	<main class="page">
-		<div class="wrap">
+		<div class="wrap pt250 mb90">
+			<div class="text-bg bg1">
+				<div class="container-fluid">
+					<div class="col-md-5 col-md-offset-6">
+						<h2 class="heading-lg">What is<br><span>Carbontec®</span></h2>
+						<div class="text">Carbontec® is a UL-listed technology that heats space with radiant energy using a carbon fiber polymer film. Infrared waves heat the entire room with maximum efficiency while the system remains hidden inside the floors and ceilings of your home or office. It simply needs to be plugged into an outlet in order to start generating heat, and can reach a heat of up to 300°F using a power supply as low as 30 volts. The Carbontec® system was designed to replace inefficient and outdated conventional heating systems at a fraction of the operating expense.</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-bg bg2 color-dark">
+				<div class="container-fluid">
+					<div class="col-md-5 col-md-offset-1">
+						<h2 class="heading-lg">Where can<br><span class="red">Carbontec®</span><br>be used</h2>
+						<div class="text">The film can be cut to your specifications and applied in any ceiling or under any floor. In addition, it can be placed under or behind many accessories such as a rugs or wall fixtures. Carbontec® works particularly well when installed in a ceiling, where it reaches its peak 98% efficiency. Carbontec® also happens to be the only UL-listed heating system capable of installation in a ceiling. In addition, it can be adhered to drywall, embedded into plaster and covered with paint. In most cases, the material remains hidden all while keeping your space comfortable and cozy.</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-bg bg3">
+				<div class="container-fluid">
+					<div class="col-md-5 col-md-offset-6">
+						<h2 class="heading-lg">How does<br><span class="red">Carbontec®</span><br>work</h2>
+						<div class="text">There are only a few components to the Carbontec system, which distinguishes it from traditional heating systems and makes it very easy to maintain. Two clips connected at either end of the polymer film are attached to copper strips running along the film’s exterior. These strips are connected to a hidden transformer, which reduces the 110/220-volt film down to 30 volts, allowing maximum heat efficiency at the lowest possible power yield. The transformer can connect to a thermostat or Bluetooth-enabled device, allowing the user to regulate temperature control whether onsite or off. Within seconds of supplying power to the Carbontec system, your space will be filled with radiant heat at the desired temperature.</div>
+					</div>
+				</div>
+			</div>
 			<div class="container">
-				<article class="block-content text-center">
-					<h1 class="heading">Carbontec® film generates  <strong>comfortable</strong>  heat quickly and efficiently.</h1>
-					<div class="content">
-The heating quality and cost effectiveness of Carbontec® surpass any of the conventional heating systems in use today. Further, Carbontec® is easy to install and is invisible after installation.</div>
-				</article>
-				<section class="category">
-					<h2 class="heading">Carbontec® Heating Films can be applied anywhere</h2>
-					<div class="row">
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products1.jpg" alt=""></span>
-								<span class="title">Wall</span>
-							</a>
+				<div class="heading-1 text-center pt65"><span><strong class="red">Carbontec®</strong> is seeing successful use across Germany, Russia and the UK, with massive potential for North America.</span></div>
+				<h3 class="heading-red text-center">Benefits of Carbontec®</h3>
+				<ul class="list">
+					<li>
+						<span class="num">1</span>
+						<div class="title">Cost Efficient</div>
+						<div class="text">Carbontec® runs so efficiently at such low voltage that it practically pays for itself within a couple years of implementation.</div>
+					</li>
+					<li>
+						<span class="num">2</span>
+						<div class="title">Heating Efficiency</div>
+						<div class="text">Traditional heating systems are 70% efficient at best. Carbontec can yield 98% efficiency. This means lower electricity bills and
+greenhouse gas emissions.</div>
+					</li>
+					<li>
+						<span class="num">3</span>
+						<div class="title">Health Benefits</div>
+						<div class="text">Infrared heating has been known to improve blood circulation, increase joint mobility, and rejuvenate skin. In addition, infrared heat
+has anti-allergenic properties. Not to mention, the system produces little to no dust, acts as a dehumidifier, and can help eliminate
+the formation of mold.</div>
+					</li>
+					<li>
+						<span class="num">4</span>
+						<div class="title">Space Saver</div>
+						<div class="text">Carbontec® eliminates the clutter of pipes, boilers, and radiators as utilized by outdated conventional heating systems.</div>
+					</li>
+					<li>
+						<span class="num">5</span>
+						<div class="title">Ease of Use</div>
+						<div class="text">The Carbontec® film is just three millimeters thick and can be placed behind or underneath any decorative surface. The Carbontec®
+perforated film has a unique patented surface and wool coating that allows for easier adhesion, saving up to 32% on construction
+mixes.</div>
+					</li>
+					<li>
+						<span class="num">6</span>
+						<div class="title">Safety</div>
+						<div class="text">The Carbontec® System is UL-listed, 100% safe, fire-retardant, self-extinguishing, and resistant to minor damages, punctures, and
+water.</div>
+					</li>
+				</ul>
+				<div class="line"></div>
+				<div class="table-info">
+					<table>
+						<thead>
+							<tr>
+								<th></th>
+								<th>Warm Floor</th>
+								<th>Low Dust</th>
+								<th>Compact</th>
+								<th>No O&amp;M</th>
+								<th>Efficiency</th>
+								<th>Easy Install</th>
+								<th>Green</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Electric under floor<br>heating</td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td>50-60%</td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+							</tr>
+							<tr>
+								<td>Water under floor<br>heating</td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td>72%</td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+							</tr>
+							<tr>
+								<td>Radiator<br>(central heating)</td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td>< 30%</td>
+								<td><img src="images/red-dot.png" alt=""></td>
+								<td><img src="images/red-dot.png" alt=""></td>
+							</tr>
+							<tr>
+								<td><span class="red">Carbontec®</span></td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td>98%</td>
+								<td><img src="images/green-dot.png" alt=""></td>
+								<td><img src="images/green-dot.png" alt=""></td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="info text-center">These are just some of the reasons why Carbontec is the superior choice when it comes to heating.<br>We are happy to answer any additional questions you might have and look forward to your response.</div>
+				</div>
+				<div class="line"></div>
+				<h3 class="heading-red text-center">What different Carbontec® product exist</h3>
+				<div class="text text-center">The Carbontec® 251-L and 251-S heating films are sold in large rolls. As such, the installer can configure them
+multiple ways. The 251-L film is 2’ (0.6 m) wide, and heats large spaces. The 251-S film is thinner, at 6.75” (0.17 m) wide,
+and heats smaller zones than the 251 L.</div>
+				<div class="line"></div>
+				<h3 class="heading-red text-center">Estimate your Carbontec® usage</h3>
+				<div class="calc">
+					<div class="heading">Carbontec® Calculator</div>
+					<div class="calc-body">
+						<div class="title">Rooms</div>
+						<div class="text"><em>Enter the approximate square footage of each room that you intend to put a Carbontec® System</em></div>
+						<div class="calc-val">
+							<div class="row calc-row">
+								<div class="col-xs-6">Room 1</div>
+								<div class="col-xs-6 text-right"><input size="3" class="edit-field" type="text" value="10"><em>sq ft</em></div>
+							</div>
+							<div class="row calc-row">
+								<div class="col-xs-6">Room 2</div>
+								<div class="col-xs-6 text-right"><input size="3" class="edit-field" type="text" value="700"><em>sq ft</em></div>
+							</div>
+							<div class="row calc-row">
+								<div class="col-xs-6">Room 3</div>
+								<div class="col-xs-6 text-right"><input size="3" class="edit-field" type="text" value="150"><em>sq ft</em></div>
+							</div>
+							<a href="#" class="add"></a>
 						</div>
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products2.jpg" alt=""></span>
-								<span class="title">Ceiling</span>
-							</a>
+						<div class="title">Electricity</div>
+						<div class="text"><em>Enter the approximate price paid for electricity per kWh in the space, which may be found by looking at an electricity bill</em></div>
+						<div class="calc-val">
+							<div class="slider-wrap">
+								<div id="slider">
+									<div id="custom-handle" class="ui-slider-handle"><span></span></div>
+								</div>
+								<div class="amount amount-min">$ 0.090</div>
+								<div class="amount amount-max">$ 0.140</div>
+							</div>
+							<script>
+								$( function() {
+								    var handle = $( "#custom-handle span" );
+								    $( "#slider" ).slider({
+								    	  min: 0.09,
+										  max: 0.14,
+										  step: 0.001,
+										  range: 'min',
+								      create: function() {
+								        handle.text( $( this ).slider( "value" ));
+								      },
+								      slide: function( event, ui ) {
+								        handle.text( ui.value);
+								      }
+								    });
+								});
+							</script>
 						</div>
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products3.jpg" alt=""></span>
-								<span class="title">Floor</span>
-							</a>
-						</div>
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products4.jpg" alt=""></span>
-								<span class="title">Bathroom</span>
-							</a>
-						</div>
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products5.jpg" alt=""></span>
-								<span class="title">Mobile homes</span>
-							</a>
-						</div>
-						<div class="col-md-2">
-							<a href="#" class="items">
-								<span class="pic"><img src="images/products/products6.jpg" alt=""></span>
-								<span class="title">Exteriors</span>
-							</a>
+						<div class="text-center"><a href="#" class="btn btn-default">Calculate</a></div>
+						<div class="calc-val">
+							<div class="row calc-row">
+								<div class="col-xs-10">Estimated total ft. of Carbontec® film required</div>
+								<div class="col-xs-2 text-right"><span class="val">1,782</span> ft</div>
+							</div>
+							<div class="row calc-row">
+								<div class="col-xs-10">Estimated total upfront cost</div>
+								<div class="col-xs-2 text-right">$ <span class="val">31,185</span></div>
+							</div>
+							<div class="row calc-row">
+								<div class="col-xs-10">Estimated cost per hour</div>
+								<div class="col-xs-2 text-right">$ <span class="val">1.78</span></div>
+							</div>
 						</div>
 					</div>
-					<div class="text-center"><a href="#" class="btn btn-default">Discover Carbontec® System</a></div>
-				</section>
+					<div class="calc-footer">
+						<div class="row">
+							<div class="col-xs-6"><a href="#" class="btn btn-default btn-sm">Save</a><a href="#" class="btn btn-default btn-sm">Print</a></div>
+							<div class="col-xs-6 text-right"><a href="#" class="btn btn-default btn-sm">Reset</a></div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</main>
