--- a/carbontec/distributors.html
+++ b/carbontec/distributors.html
@@ -58,45 +58,23 @@
 			</div>
 		</div>
 	</header>
+	<div class="page-image">
+		<img src="images/hands.jpg" class="img-responsive" alt="">
+	</div>
 	<main class="page">
-		<div class="wrap pt250">
+		<div class="wrap pt90 mb90">
 			<div class="container">
-				<div class="about">
-					<div class="text text-center">After discovering the benefit of the innovative Carbontec® system in Europe and Russia, four entrepreneurs set their minds on bringing the  technology to North America. Carbontec® was founded in 2016 when the company gained exclusive license from the main manufacturer in Germany, Ginesys GmBh, to do just that. Carbontec® was founded with a committment to bringing a better, cheaper, more efficient, cleaner, healthier, and environmentally-friendly heating product to the world.</div>
-					<h1 class="heading red text-center"><span>Founders</span></h1>
-					<div class="row">
-						<div class="col-md-6">
-							<div class="founder">
-								<div class="pic"><img class="img-responsive" src="images/Greg-Rovner.png" alt="Greg Rovner"></div>
-								<h2 class="title"><span>GREG ROVNER</span></h2>
-								<div class="text">Greg has been involved in business development for over 20 years and has successfully launched several existing businesses. He has consulted on projects ranging from tech, fossil fuel, real estate development, online travel agencies, and more. Greg has a track record of success and most recently raised over $1M for one of his tech plays, Heally.</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="founder">
-								<div class="pic"><img class="img-responsive" src="images/Greg-Landau.png" alt="Greg Landau"></div>
-									<h2 class="title"><span>GREG LANDAU</span></h2>
-									<div class="text">Greg immigrated to the United States in 1979, with no help or grasp of the English language. With hard work and dedication, he became a true success story by building one of the largest insurance brokerages in New York at the time, and being dubbed the “American Dream” in various publications.</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-10 col-md-offset-1">
-							<div class="founder">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="pic"><img class="img-responsive" src="images/Burton-Landau.png" alt="BURTON LANDAU, ESQ"></div>
-										<h2 class="title"><span>BURTON LANDAU, ESQ</span></h2>
-									</div>
-									<div class="col-md-6">
-										<div class="pic"><img class="img-responsive" src="images/Nima-Ajabshir.png" alt="NIMA AJABSHIR, ESQ"></div>
-										<h2 class="title"><span>NIMA AJABSHIR, ESQ</span></h2>
-									</div>
-								</div>
-								<div class="text">Burton and Nima make up South Florida Law, PLLC. The business partners of South Florida Law founded the full-service law firm in 2014, and since have developed it into a successful practice, with a heavy focus on commercial &amp; business transactions and contracts.  They work as in-house counsel for Carbontec Worldwide LLC and their legal expertise combined with experience running a successful business work as an invaluable asset to Carbontec. Both Burton and Nima received their Juris Doctorate from the St. Thomas University School of Law in Florida.</div>
-							</div>
-						</div>
-					</div>
+				<h2 class="heading-2 text-center"><span>Carbontec®</span> currently works with the following partners</h2>
+				<div class="row img-list">
+					<div class="col-md-4"><img src="images/enertech.png" class="img-responsive" alt=""></div>
+					<div class="col-md-4"><img src="images/famous.png" class="img-responsive" alt=""></div>
+					<div class="col-md-4"><img src="images/informa.png" class="img-responsive" alt=""></div>
+				</div>
+				<div class="line"></div>
+				<div class="text-editor text-center">
+					<p>And we’re always looking to add to our circle of partners. Please give us a call if you’re interested in gaining exclusive license to sell pre-assembled Carbontec® systems to your end customers.</p>
+					<p>In addition to providing custom-sized carbon fiber polymer film, Carbontec® also provides our partners with additional, necessary components such as  transformers, thermostats, splice connectors, terminal blocks, and cable mounts. In other words, Carbontec® provides its partners with a turnkey heating system that only requires installation in the home or office to get up and running.</p>
+					<div class="text-center"><a href="#" class="btn btn-default">BECOME A PARTNER</a></div>
 				</div>
 			</div>
 		</div>
