--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="bf-item">
                 <figure class="pic"><img src="bofolio/images/temp/partnership4u.png" alt=""></figure>
-                <div class="title">Partnership4u</div>
-                <a href="#" target="_blank" class="link">www.partnership4u.com</a>
+                <div class="title">Karavaeva Flowers/</div>
+                <a href="http://karavaevaflowers.com" target="_blank" class="link">karavaevaflowers.com</a>
             </div>
             <div class="bf-item">
                 <figure class="pic"><img src="bofolio/images/temp/tipuli.png" alt=""></figure>
