--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
             </div>
             <div class="bf-item">
-                <figure class="pic"><img src="bofolio/images/temp/partnership4u.png" alt=""></figure>
-                <div class="title">Karavaeva Flowers/</div>
+                <figure class="pic"><img src="bofolio/images/temp/karavaevaflowers.png" alt=""></figure>
+                <div class="title">Karavaeva Flowers</div>
                 <a href="http://karavaevaflowers.com" target="_blank" class="link">karavaevaflowers.com</a>
             </div>
             <div class="bf-item">
