--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 <div class="title">jQuery</div>
                 <figure class="pic"><img src="bofolio/images/temp/jq.jpg" alt=""></figure>
             </div>
-            <div class="skll-item">
+            <!-- <div class="skll-item">
                 <div class="title">Gulp/Grunt</div>
                 <figure class="pic"><img src="bofolio/images/temp/gulp-grunt.jpg" alt=""></figure>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer class="footer">
