--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <main class="page">
         <section class="bfolio">
+            <h2 class="heading">Jobs</h2>
             <div class="bf-item">
                 <figure class="pic"><img src="bofolio/images/temp/lead.png" alt=""></figure>
                 <div class="title">Lead.im</div>
@@ -62,34 +63,38 @@
             </div>
         </section>
         <section class="skill">
+            <h2 class="heading">Skill</h2>
             <div class="skll-item">
-                <div class="title">Photoshop</div>
+                <div class="title">Photoshop <div class="skill-progress"><svg width="30" height="30"><circle class="good" cx="175" cy="15" r="10" transform="rotate(-90, 95, 95)"/></svg></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/ps.jpg" alt=""></figure>
             </div>
             <div class="skll-item">
-                <div class="title">Illustrator</div>
+                <div class="title">Illustrator <div class="skill-progress"></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/ai.jpg" alt=""></figure>
             </div>
             <div class="skll-item">
-                <div class="title">HTML</div>
+                <div class="title">HTML <div class="skill-progress"></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/html.jpg" alt=""></figure>
             </div>
             <div class="skll-item">
-                <div class="title">CSS</div>
+                <div class="title">CSS <div class="skill-progress"></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/css.jpg" alt=""></figure>
             </div>
             <div class="skll-item">
-                <div class="title">Sass</div>
+                <div class="title">Sass <div class="skill-progress"></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/sass.jpg" alt=""></figure>
             </div>
             <div class="skll-item">
-                <div class="title">jQuery</div>
+                <div class="title">jQuery <div class="skill-progress"></div></div>
                 <figure class="pic"><img src="bofolio/images/temp/jq.jpg" alt=""></figure>
             </div>
             <!-- <div class="skll-item">
                 <div class="title">Gulp/Grunt</div>
                 <figure class="pic"><img src="bofolio/images/temp/gulp-grunt.jpg" alt=""></figure>
             </div> -->
+        </section>
+        <section class="contact">
+            <h2 class="heading">Contact</h2>
         </section>
     </main>
     <footer class="footer">
