--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="bf-item">
                 <figure class="pic"><a href="bofolio/images/temp/sohm2.png" target="_blank"><img src="bofolio/images/temp/sohm2s.png" alt=""></a></figure>
-                <div class="title">Swiss Star</div>
+                <div class="title">Dominique Sohm</div>
                 <a href="bofolio/images/temp/sohm2.png" target="_blank" class="link">screen</a>
             </div>
             <div class="bf-item">
