--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="bf-item">
                 <figure class="pic"><a href="bofolio/images/temp/swissstar.png" target="_blank"><img src="bofolio/images/temp/swissstars.png" alt=""></a></figure>
-                <div class="title">Swiss start</div>
+                <div class="title">Swiss Start</div>
                 <a href="bofolio/images/temp/swissstar.png" target="_blank" class="link">screen</a>
             </div>
             <div class="bf-item">
